; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/msg/extr_privmsg.c_uni_decode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/msg/extr_privmsg.c_uni_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uni_msg = type { i32 }
%struct.uni_all = type { i32 }
%struct.unicx = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uni_decode(%struct.uni_msg* %0, %struct.uni_all* %1, %struct.unicx* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.uni_msg*, align 8
  %6 = alloca %struct.uni_all*, align 8
  %7 = alloca %struct.unicx*, align 8
  store %struct.uni_msg* %0, %struct.uni_msg** %5, align 8
  store %struct.uni_all* %1, %struct.uni_all** %6, align 8
  store %struct.unicx* %2, %struct.unicx** %7, align 8
  %8 = load %struct.unicx*, %struct.unicx** %7, align 8
  %9 = getelementptr inbounds %struct.unicx, %struct.unicx* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load %struct.uni_msg*, %struct.uni_msg** %5, align 8
  %11 = load %struct.uni_all*, %struct.uni_all** %6, align 8
  %12 = load %struct.unicx*, %struct.unicx** %7, align 8
  %13 = call i64 @uni_decode_head(%struct.uni_msg* %10, %struct.uni_all* %11, %struct.unicx* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %24

16:                                               ; preds = %3
  %17 = load %struct.uni_msg*, %struct.uni_msg** %5, align 8
  %18 = load %struct.uni_all*, %struct.uni_all** %6, align 8
  %19 = load %struct.unicx*, %struct.unicx** %7, align 8
  %20 = call i64 @uni_decode_body(%struct.uni_msg* %17, %struct.uni_all* %18, %struct.unicx* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  store i32 -2, i32* %4, align 4
  br label %24

23:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %22, %15
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i64 @uni_decode_head(%struct.uni_msg*, %struct.uni_all*, %struct.unicx*) #1

declare dso_local i64 @uni_decode_body(%struct.uni_msg*, %struct.uni_all*, %struct.unicx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
